<resources>
    <string name="app_name" translatable="false">Hike Companion</string>
    <string name="title_public">Public</string>
    <string name="title_private">Private</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="course_title">Name</string>
    <string name="take_gps_position">Take GPS position</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="image_captured">Image captured</string>
    <string name="add_new_track">Add</string>
    <string name="profile_file" translatable="false">io.github.mrfastwind.hikecompanion.PROFILE_FILE</string>
    <string name="profile_image_path" translatable="false">profileimage</string>
    <string name="trip_image">Trip image</string>
    <string name="share">Share</string>
    <string name="bar_no_internet">no internet</string>
    <string name="add_new_trip">Add new trip</string>
    <string name="dialog_permission_denied">Enable location permission</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="course_length">Distance</string>
    <string name="dialog_save">Save</string>
    <string name="course_length_error">Course length is too short</string>
    <string name="is_public">Public</string>
    <string name="statistics">Statistics</string>
    <string name="distance_unit" translatable="false">m</string>
    <string name="picture_holder">captured picture</string>
    <string name="image_carousel">Images</string>
    <string name="dialog_save_text">Save picture?</string>
    <string name="unknown_location">unknown location</string>
    <string name="undo">Undo</string>
    <string name="filter">filter</string>
    <string name="less_1km" translatable="false"><![CDATA[< 1km]]></string>
    <string name="more_1km" translatable="false"><![CDATA[1km >]]></string>
    <string name="less_10km" translatable="false"><![CDATA[< 10km]]></string>
    <string name="more_10km" translatable="false"><![CDATA[10km >]]></string>
    <string name="delete">Delete</string>
    <string name="id" translatable="false">Id</string>
    <string name="images_not_found">No image has been found</string>
    <string name="course_message">Check it out here</string>
</resources>