<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    android:layout_gravity="top">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:orientation="vertical">

            <org.osmdroid.views.MapView
                    android:layout_width="match_parent"
                    android:layout_height="216dp"
                    android:id="@+id/details_mapview"
                    android:layout_gravity="top"
            />



            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center">

                <TextView
                        android:id="@+id/travel_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:textAlignment="textStart"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                        android:id="@+id/date_field"
                        android:text="00-00-0000"
                        android:layout_margin="10dp"
                        android:textAlignment="textEnd"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" app:layout_constraintStart_toEndOf="@+id/travel_date"
                        android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>



            <TextView
                    android:id="@+id/name_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/course_title"
                    android:layout_margin="10dp"
                    android:textAlignment="textStart"
            />
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:textAlignment="textStart" android:minHeight="48dp" android:hint="@string/course_title"/>

            <TextView
                    android:id="@+id/course_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_margin="10dp"
            />
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:textAlignment="textStart"
                    android:inputType="text|textMultiLine"
                    android:hint="@string/description" android:minHeight="48dp"/>
            <TextView
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:text="@string/statistics"
                    app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp">

                <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                          android:text="@string/course_length"
                android:layout_weight="5"/>

                <TextView
                        android:id="@id/distance_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="000"
                        android:textAlignment="textEnd"
                        android:layout_weight="2"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:text="@string/distance_unit"/>


            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/public_switch"
                    android:text="@string/is_public"
                    android:textAlignment="textStart"
                    android:layout_marginStart="10dp"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center|start" android:minHeight="48dp"></androidx.appcompat.widget.SwitchCompat>

            <Button
                    android:id="@+id/share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/blue_800"
            />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>