<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <org.osmdroid.views.MapView
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/guideline2"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:id="@id/mapview"
            app:layout_constraintHorizontal_bias="0.5"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/guideline2" app:layout_constraintGuide_percent="0.70"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_length"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:id="@+id/textView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="0000"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="4dp"
            android:id="@+id/distance_value"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distance_unit"
            android:textSize="24sp"
            android:text="@string/distance_unit"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/distance_value"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginStart="4dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="16dp"
            android:id="@+id/guideline3"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="395dp"
            android:id="@+id/guideline6"/>


    <TextView android:layout_width="wrap_content"
              android:textSize="18sp"
              android:layout_height="wrap_content"
              android:text="@string/take_a_picture"
              app:layout_constraintTop_toTopOf="@+id/textView" app:layout_constraintEnd_toStartOf="@+id/action_image"
              android:layout_marginTop="28dp" android:layout_marginEnd="12dp"/>
    <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/action_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:tint="?attr/colorOnSecondary"
            android:backgroundTint="?attr/colorSecondaryVariant"
            android:src="@drawable/ic_baseline_photo_camera_24"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/textView"
            android:layout_marginTop="20dp" android:layout_marginEnd="8dp"
            android:contentDescription="@string/take_a_picture" android:minHeight="48dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline4" app:layout_constraintGuide_percent="0.9"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/dialog_cancel"
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/blue"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/dialog_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/blue"
    />
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline5"
            android:orientation="vertical" app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>